# software-synth

./: Cargo.toml  LICENSE  README.md
src/: main.rs  midi_file_reader.rs  output.rs  ui.rs
src/synth/: envelope.rs  instrument.rs  mod.rs  osc.rs
