[package]
name = "software-synth"
version = "0.1.0"
authors = ["Will Robson <wrbs@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = { git = "https://github.com/RustAudio/cpal" }
termion = "1.5.5"
sdl2 = "0.33.0"
ghakuf = "0.5.4"
structopt = "0.3.12"
rand = "0.7.3"